--- a/practiqum/game_research.ipynb
+++ b/practiqum/game_research.ipynb
@@ -1,1 +1,9 @@
-
+{
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import stats as st"
+   ]
+  }
